<resources>
    <string name="app_name">Lara</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="house_code">House code</string>
    <string name="home">Home</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="media">Media</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="no_rooms_available">No rooms available</string>
    <string name="no_devices_available">No devices available</string>
    <string name="no_media_available">No media available</string>
    <string name="no_security_available">Security is not available</string>
    <string name="view_mode">View mode</string>
    <string name="view_mode_list">List</string>
    <string name="view_mode_grid">Grid</string>
    <string name="no_features_available">No features available</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="last_update">Last update: %1$s</string>
    <array name="view_modes">
        <item>@string/view_mode_list</item>
        <item>@string/view_mode_grid</item>
    </array>
    <string name="cancel">Cancel</string>
    <string name="confirm">Yes</string>
    <string name="prompt_info_title">Lara Authentication</string>
    <string name="prompt_info_cancel">Cancel</string>
    <string name="use_biometrics">Use fingerprint to login</string>
    <string name="biometrics_activated">Fingerprint login is activated</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
</resources>