<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/rooms"
        android:icon="@drawable/ic_baseline_view_agenda_24"
        android:title="@string/rooms" />

    <item
        android:id="@+id/devices"
        android:icon="@drawable/ic_baseline_device_hub_24"
        android:title="@string/devices" />

    <item
        android:id="@+id/media"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/media" />

    <item
        android:id="@+id/security"
        android:icon="@drawable/ic_baseline_security_24"
        android:title="@string/security" />

</menu>