<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_32">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/register_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_assistant" />

            <ProgressBar
                android:id="@+id/register_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_house_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/house_code"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke"
                app:layout_constraintTop_toBottomOf="@id/register_loading" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke"
                app:layout_constraintTop_toBottomOf="@id/register_house_code" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke"
                app:layout_constraintTop_toBottomOf="@id/register_first_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke"
                app:layout_constraintTop_toBottomOf="@id/register_last_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke"
                app:layout_constraintTop_toBottomOf="@id/register_username" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:padding="@dimen/padding_16"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@id/register_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_login_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:padding="@dimen/padding_16"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
