<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_assistant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/smoke_transparent"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/smoke_transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_16"
                android:paddingTop="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_12"
                android:textColor="@color/white"
                android:textColorHint="@color/smoke" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/login" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_loading"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
